--- a/src/components/trello-list-column/trello-list-column.scss
+++ b/src/components/trello-list-column/trello-list-column.scss
@@ -2,26 +2,33 @@
   width: 30rem;
   background-color: #EBECF0;
   border-radius: .5rem;
-  padding: 0 2rem 3rem;
-
   margin-right: 2rem;
+  height: 100%;
   &__header {
+    display: flex;
+    align-items: center;
+
     min-height: 4rem;
-    padding-top: 1.8rem;
   }
   &__title {
+    padding: 1rem 0;
     font-weight: 700;
     font-size: 1.8rem;
     color: #000;
     margin-bottom: 0;
   }
   &__list {
-    margin-top: 2rem;
+    overflow: auto;
+    margin-top: 1rem;
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
   }
   &__item {
     margin-bottom: 1rem;
+  }
+  &__header,
+  &__list{
+    padding: 0 2rem;
   }
 }
