--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -12,13 +12,22 @@ body {
   font-weight: 400;
   line-height: 19px;
   z-index: 1;
+  width: 100%;
+  height: 100%;
 }
+
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+}
+
 
 .app {
   position: relative;
   display: block;
-  width: 100%;
-  height: 100vh;
   z-index: 1;
   &-content {
     padding: 4rem;
