--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -2,12 +2,13 @@ $transition-delay: .3s;
 
 .toggle-background__item,
 .toggle-background__item span,
-.toggle-background {
+.toggle-background, {
   transition:
           background-color $transition-delay ease-in,
           opacity $transition-delay ease-in;
 }
 
-.toggle-background {
+.toggle-background,
+.trello-list-card--delete {
   transition: all .18s ease-in
 }
