--- a/src/components/trello-list-card/trello-list-card.scss
+++ b/src/components/trello-list-card/trello-list-card.scss
@@ -8,6 +8,7 @@
   filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.25));
   border-radius: .3rem;
   z-index: 3;
+  margin-bottom: 1rem;
   &--label { font-size: 1.4rem; }
   &--delete {
     position: absolute;
