--- a/src/components/trello-list-container/trello-list-container.scss
+++ b/src/components/trello-list-container/trello-list-container.scss
@@ -1,4 +1,5 @@
-.trello-list-container {
+.trello-list-container,
+.trello-list-droppable {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
