--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -18,11 +18,17 @@ body {
 
 
 html,
-body,
 #root,
 .app {
+  display: flex;
   height: 100%;
-  width: 100%;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow-x: hidden;
 }
 
 
@@ -31,6 +37,14 @@ body,
   display: block;
   z-index: 1;
   &-content {
-    padding: 4rem;
+    display: flex;
+    padding: 4rem 4rem 0 4rem;
+    overflow: auto;
+
+    position: absolute;
+    top: 4rem;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 }
